--- a/ReadMe
+++ b/ReadMe
@@ -3,4 +3,5 @@
    WildCard Matching: Time Limit Exceeded
 2. beautiful algorithm
    Jump Game
-3. 
+3.Hard Problem
+  WildCard Matching (try twice and fail)  Time Limit
