--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,7 @@
 1. hard to implement
    Rotate List
    WildCard Matching: Time Limit Exceeded
+   ZigZag Conversion
 2. beautiful algorithm
    Jump Game
 3.Hard Problem
