--- a/ReadMe
+++ b/ReadMe
@@ -3,6 +3,10 @@
    WildCard Matching: Time Limit Exceeded
    ZigZag Conversion
 2. beautiful algorithm
-   Jump Game
+   Jump GameII: I find a good algorithm
 3.Hard Problem
   WildCard Matching (try twice and fail)  Time Limit
+  Surrounded Region(Big data- runtime error)
+
+4. Recursion
+   Flatten binary Tree to Linked List (Follow UP: If we don't use recursion?)
