Commit PathSum And ReverseLinkList

--- a/ReadMe
+++ b/ReadMe
@@ -18,4 +18,9 @@
   Median of Two Sorted Array.
 
 7. Backtrack 
-   Unique Binary Search Tree.
+   Unique Binary Search Tree
+
+8 error-prone
+  PathSum
+  Reverse Linked List II
+  Generate Parenthesis
