--- a/ReadMe
+++ b/ReadMe
@@ -5,10 +5,11 @@
 2. beautiful algorithm
    Jump GameII: I find a good algorithm
    Longest Valid Parentheses!!
+   Decode Ways (recursion and Dynamic Programming)
 3.Hard Problem
   WildCard Matching (try twice and fail)  Time Limit
   Surrounded Region(Big data- runtime error)
-
+  Subsets
 4. Recursion
    Flatten binary Tree to Linked List (Follow UP: If we don't use recursion?)
 
