--- a/ReadMe
+++ b/ReadMe
@@ -22,11 +22,18 @@
 
 7. Backtrack 
    Unique Binary Search Tree
-
+   Word Search 
 8 error-prone
   PathSum
   Reverse Linked List II
   Generate Parenthesis
-
+  Construct Binary Tree from inorder and postorder 
 9. incorrect 
    WildCard Matching
+10 Code Beautiful
+   Word Search
+   Search the rotated Array II
+   Level Order
+11 Dynamic Programmin
+    minimum path sum(try compress the space)
+
